--- a/Basic of Ansible Playbook/Install_https.yml
+++ b/Basic of Ansible Playbook/Install_https.yml
@@ -1,10 +1,9 @@
 #!/root/ansible/myansible/bin/ansible-playbook
 - name: Installing WebServer
   hosts: all
-  remote_user: ec2-user
+  remote_user: admin
   become: 'yes'
-  become_user: root
-
+  
   tasks:
     - name: Ensure Apache is at the Latest Version
       yum:
